--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,7 @@ ol.type li {
 	display: inline-block;
 	margin-left: 20px;
 	text-transform: uppercase;
+	height: 4em;
 }
 ol.type li a {
 	background: transparent;
