--- a/css/style.css
+++ b/css/style.css
@@ -510,3 +510,17 @@ header .intro-text {
 	margin-bottom: 20px;
 }
 }
+
+img.stars
+{
+	margin-top:10px;
+	width:20px;
+	height:20px;
+	float:left;
+}
+img.showStars
+{
+	width:20px;
+	height:20px;
+	margin-bottom:10px;
+}
